[gd_scene load_steps=4 format=3 uid="uid://cpjjhmw4gdy70"]

[ext_resource type="Script" path="res://actors/Projectiles/Bullet/bullet.gd" id="1_lw2us"]
[ext_resource type="Texture2D" uid="uid://c0ta44nbhmy01" path="res://Assets/Projectile/Green_projectile.png" id="2_5gs8c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbs76"]
radius = 6.0

[node name="Bullet" type="Area2D" groups=["projectile"]]
z_index = 1
collision_layer = 8
collision_mask = 5
script = ExtResource("1_lw2us")
bullet_damage = 10
motion_speed = 1000.0

[node name="MainSprite" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_5gs8c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(22, 0)
shape = SubResource("CircleShape2D_qbs76")

[node name="TimeToLive" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_timeout"]
